<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArduinoAndroidApp</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_main">Go</string>
    <string name="light_off">Light off</string>
    <string name="light_on">Light on</string>
    <string name="checkbox_vibration">vibrate</string>
    <string name="checkbox_light">toggle light</string>
    <string name="title_activity_manual_debug">ManualDebug</string>

</resources>
